--- a/_desafio-final-apoio/app/client/package.json
+++ b/_desafio-final-apoio/app/client/package.json
@@ -13,7 +13,9 @@
     "react-dom": "16.13.1",
     "react-materialize": "3.9.8",
     "react-modal": "3.11.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-select": "4.3.0",
+    "styled-components": "5.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
